Closed Bug 1555653 Opened 5 years ago Closed 5 years ago

[wayland] assertion of unlocked buffer fails on WindowBackBufferShm

Categories

(Core :: Widget: Gtk, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: jhorak, Assigned: jhorak)

Details

Attachments

(1 file)

In debug build, there's an assert on two locations:
[1] - the implementation of WindowBackBufferShm::IsLocked is missing
[2] - the mPendingCommit is set by WindowSurfaceWayland::Commit and then CommitWaylandBuffer is called which flushes the cached drawings by getting LockWaylandBuffer which calls GetWaylandBufferToDraw and asserts that mPendingCommit is false. I guess the assert is not relevant as we no longer do the double buffering.

[1] https://dxr.mozilla.org/mozilla-central/rev/9131063a5ce0676336736f15d01bb5d9a2b9ad32/widget/gtk/WindowSurfaceWayland.cpp#968
[2] https://dxr.mozilla.org/mozilla-central/rev/9131063a5ce0676336736f15d01bb5d9a2b9ad32/widget/gtk/WindowSurfaceWayland.cpp#596

Pushed by btara@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1ecaa6d17535
Fix asserts in WindowBackBufferShm; r=stransky

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Assignee: nobody → jhorak
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: