Bug 1555653 Fix asserts in WindowBackBufferShm; r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D33147

--HG--
extra : moz-landing-system : lando